converting function into package

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-# History files
-.Rhistory
-.Rapp.history
-
-# Session Data files
-.RData
-
-# RStudio files
-.Rproj.user/
 .Rproj.user
+.Rhistory
+.RData
+.Ruserdata
+inst/doc
