now using jsonlite package which solves bug in read.csv

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports:
-    httr,
-    readr
+    devtools,
+    jsonlite
 Suggests: 
     knitr,
     rmarkdown
