starting to create rgbif2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ LazyData: true
 RoxygenNote: 6.1.1
 Imports:
     devtools,
-    jsonlite
+    jsonlite,
+    rgbif
 Suggests: 
     knitr,
     rmarkdown
