--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,7 @@ importFrom(jsonlite,fromJSON)
 importFrom(rgbif,name_backbone)
 importFrom(rgbif,occ_search)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_replace)
+importFrom(stringr,str_split)
+importFrom(stringr,str_trim)
 importFrom(utils,write.table)
