--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(check_status)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
+importFrom(flora,remove.authors)
 importFrom(jsonlite,fromJSON)
 importFrom(rgbif,name_backbone)
 importFrom(rgbif,occ_search)
