adds non-ascii check in check_status

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(check_status)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
+importFrom(flora,fixCase)
 importFrom(flora,remove.authors)
 importFrom(jsonlite,fromJSON)
 importFrom(rgbif,name_backbone)
 importFrom(rgbif,occ_search)
+importFrom(stringi,stri_enc_mark)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
