--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ export(check_taxon)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
+export(search_flora)
+importFrom(finch,dwca_cache)
+importFrom(finch,dwca_read)
 importFrom(flora,fixCase)
 importFrom(flora,remove.authors)
 importFrom(flora,suggest.names)
@@ -13,6 +16,7 @@ importFrom(jsonlite,fromJSON)
 importFrom(rgbif,name_backbone)
 importFrom(rgbif,occ_search)
 importFrom(stringi,stri_enc_mark)
+importFrom(stringr,regex)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
