adds suggest_bfg()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(check_taxon)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
+export(suggest_bfg)
 importFrom(flora,fixCase)
 importFrom(flora,remove.authors)
 importFrom(flora,suggest.names)
