--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,4 +22,6 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
+importFrom(usethis,use_data)
+importFrom(utils,globalVariables)
 importFrom(utils,write.table)
