--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
 export(search_flora)
+export(set_infraspecies)
 export(suggest_flora)
 importFrom(finch,dwca_cache)
 importFrom(finch,dwca_read)
