fixes rgbif2 for download multiple species vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,14 @@
 
 export(check_flora)
 export(check_string)
+export(format_dwc)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
 export(search_flora)
 export(set_infraspecies)
 export(suggest_flora)
+importFrom(dplyr,bind_rows)
 importFrom(finch,dwca_cache)
 importFrom(finch,dwca_read)
 importFrom(flora,fixCase)
