update search flora

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,19 +3,19 @@ Type: Package
 Title: Workflows for Downloading Occurrence Data from speciesLink, FB2020, and JABOT API
 Version: 0.1.0
 Authors@R: c(
-    person("Sara", "Mortara", email = "saramortara@gmail.com", 
+    person("Sara", "Mortara", email = "saramortara@gmail.com",
     role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6221-7537")),
-    person("Andrea", "Sánchez-Tapia", email = "andreasancheztapia@gmail.com", 
+    person("Andrea", "Sánchez-Tapia", email = "andreasancheztapia@gmail.com",
     role = c("aut"), comment = c(ORCID = "0000-0002-3521-4338"))
     )
 Maintainer: Sara R Mortara <saramortara@gmail.com>
-Description: This package download occurrences data from speciesLink (API version beta 0.1), jabot and GBIF and
+Description: This package downloads occurrences data from speciesLink (API version beta 0.1), jabot and GBIF and
     performs taxonomic cleaning according to Brazilian Flora 2020.
 Depends: R (>= 3.0.0)
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
 Imports:
     devtools,
     dplyr,
@@ -24,9 +24,10 @@ Imports:
     jsonlite,
     stringi,
     stringr,
+    textclean,
     rgbif,
     usethis
-Suggests: 
+Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
