--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,5 +24,6 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
+importFrom(textclean,replace_non_ascii)
 importFrom(utils,globalVariables)
 importFrom(utils,write.table)
