--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(bind_dwc)
 export(check_flora)
 export(check_string)
+export(getGADM)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
@@ -27,5 +28,6 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
 importFrom(textclean,replace_non_ascii)
+importFrom(utils,download.file)
 importFrom(utils,globalVariables)
 importFrom(utils,write.table)
