export update_flora

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(rspeciesLink)
 export(search_flora)
 export(set_infraspecies)
 export(suggest_flora)
+export(update_flora)
 importFrom(dplyr,bind_rows)
 importFrom(finch,dwca_cache)
 importFrom(finch,dwca_read)
