random halloween sábado en la noche check OK. mexi um pouco na vignette para knitar.

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -4,12 +4,10 @@
 #outputs
 results/
 data-raw/
-update_flora_metadata.txt
-
-R/names_flora.R
-R/problem_species.txt
 
 # scripts teste
 test.R
 checktaxa.R
-
+vignettes/articles
+docs/
+R/GADM_to_gazetteer.R
