--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(bind_dwc)
 export(check_flora)
 export(check_string)
 export(getGADM)
+export(getGAZ)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
@@ -31,4 +32,5 @@ importFrom(stringr,str_trim)
 importFrom(textclean,replace_non_ascii)
 importFrom(utils,download.file)
 importFrom(utils,globalVariables)
+importFrom(utils,unzip)
 importFrom(utils,write.table)
