--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(check_flora)
 export(check_string)
 export(getGADM)
 export(getGAZ)
+export(getWDPA)
 export(rgbif2)
 export(rjabot)
 export(rspeciesLink)
