fiz documentation of bind_dwc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(set_infraspecies)
 export(suggest_flora)
 export(update_flora)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,select)
 importFrom(finch,dwca_cache)
 importFrom(finch,dwca_read)
 importFrom(flora,fixCase)
@@ -31,6 +32,7 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
 importFrom(textclean,replace_non_ascii)
+importFrom(tidyselect,any_of)
 importFrom(utils,download.file)
 importFrom(utils,globalVariables)
 importFrom(utils,unzip)
