--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(flora,fixCase)
 importFrom(flora,remove.authors)
 importFrom(flora,suggest.names)
 importFrom(flora,trim)
+importFrom(fs,path)
 importFrom(jsonlite,fromJSON)
 importFrom(rgbif,name_backbone)
 importFrom(rgbif,occ_search)
